[package]
name = "casper-rust-wasm-sdk"
version = "0.1.0"
edition = "2021"
description = "Casper Rust Wasm Web SDK"
repository = "https://github.com/casper-ecosystem/rustSDK"
license = "Apache-2.0"
readme = "docs/README.md"
homepage = "https://casperlabs.io"
categories = ["development-tools", "wasm", "web-programming"]
keywords = ["casper", "sdk", "rust", "wasm"]
exclude = [
  ".*",
  "docs/api-wasm",
  "docs/images",
  "examples",
  "pkg",
  "pkg-nodejs",
  "tests/**",
]

[dependencies]
casper-hashing = { version = "3.0.0", git = "https://github.com/Fraser999/casper-node", branch = "rustSDK-1.6", default-features = false }
casper-types = { version = "4.0.1", git = "https://github.com/Fraser999/casper-node", branch = "rustSDK-1.6", default-features = false }
casper-client = { version = "2.0.0", git = "https://github.com/casper-ecosystem/casper-client-rs", branch = "rustSDK-feat-1.6", default-features = false }
rand = { version = "0.8.5", default-features = false }
wee_alloc = { version = "*", default-features = false, optional = true }
wasm-bindgen = "*"
wasm-bindgen-test = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
once_cell = { version = "1.18.0", default-features = false }
chrono = "0.4.31"
num-traits = "0.2"
humantime = "2"
thiserror = "1.0.50"
base16 = "0.2.1"
hex = { version = "0.4.3", default-features = false }
rust_decimal = "1.10"
blake2 = { version = "0.9.0", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]
name = "casper_rust_wasm_sdk"
path = "src/lib.rs"

[[bin]]
name = "casper_rust_wasm_sdk"
path = "src/main.rs"
doc = false

[patch.crates-io]
casper-hashing = { version = "3.0.0", git = "https://github.com/Fraser999/casper-node", branch = "rustSDK-1.6" }
casper-types = { version = "4.0.1", git = "https://github.com/Fraser999/casper-node", branch = "rustSDK-1.6" }

[profile.release]
lto = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sdk_tests = { path = "tests/integration/rust" }
