[package]
name = "casper-rust-wasm-sdk"
version = "2.0.0"
edition = "2021"
description = "Casper Rust Wasm Web SDK"
repository = "https://github.com/casper-ecosystem/rustSDK"
license = "Apache-2.0"
readme = "docs/README.md"
homepage = "https://casperlabs.io"
categories = ["development-tools", "wasm", "web-programming"]
keywords = ["casper", "sdk", "rust", "wasm"]
exclude = [
  ".*",
  "docs/api-wasm",
  "docs/images",
  "examples",
  "pkg",
  "pkg-nodejs",
  "tests/**",
]


[dependencies]
casper-types = { version = "5.0.0", default-features = false }
casper-client = { version = "2.0.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
once_cell = { version = "1.18.0", default-features = false }
chrono = "0.4.31"
num-traits = "0.2"
humantime = "2"
thiserror = "1"
base16 = "0.2.1"
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false }
rust_decimal = "1.10"
blake2 = { version = "0.9.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["stream"] }
futures-util = "*"

[lib]
crate-type = ["cdylib", "rlib"]
name = "casper_rust_wasm_sdk"
path = "src/lib.rs"

[[bin]]
name = "casper_rust_wasm_sdk"
path = "src/main.rs"
doc = false

[profile.release]
lto = true

[dev-dependencies]
sdk_tests = { path = "tests/integration/rust" }
ctor = "*"
dotenv = "0.15.0"

[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "rustSDK-feat-2.0" }
casper-client = { git = "https://github.com/casper-ecosystem/casper-client-rs", branch = "rustSDK-feat-2.0" }
