[package]
name = "casper-wasm-sdk"
version = "0.1.0"
edition = "2021"
description = "Casper Rust Wasm Web SDK"
repository = "https://github.com/casper-ecosystem/rustSDK"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://casperlabs.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# casper-client = { path = "../sdk-old", features = ["sdk"] }
casper-types = { version = "3.0.0", git = "https://github.com/casper-network/casper-node.git", branch = "rustSDK", default-features = false }
casper-client = { path = "../casper-client-rs", default-features = false, features = [
  "sdk",
] }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
wee_alloc = { version = "*", optional = true }
js-sys = "*"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
serde-wasm-bindgen = "0.5.0"
console_error_panic_hook = { version = "*", optional = true }

[lib]
crate-type = ["cdylib"]
name = "casper_wasm_sdk"
path = "src/lib.rs"
