[package]
name = "casper-wasm-sdk"
version = "0.1.0"
edition = "2021"
description = "Casper Rust Wasm Web SDK"
repository = "https://github.com/casper-ecosystem/rustSDK"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://casperlabs.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = { version = "3.0.0", git = "https://github.com/casper-network/casper-node.git", branch = "rustSDK", default-features = false }
casper-client = { path = "../casper-client-rs", default-features = false, features = [
  "sdk",
] }
rand = { version = "0.8.5", default-features = false }
wee_alloc = { version = "*", default-features = false, optional = true }
getrandom = { version = "0.2.10", default-features = false, features = ["js"] }
wasm-bindgen = "*"
wasm-bindgen-test = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
# serde-wasm-bindgen = "0.5.0"
# console_error_panic_hook = { version = "*", optional = true }
once_cell = { version = "1.18.0", default-features = false }
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }
chrono = "0.4"
num-traits = "0.2"
humantime = "2"
thiserror = "=1.0.34"
base16 = "0.2.1"
rust_decimal = "1.10"

[lib]
crate-type = ["cdylib", "rlib"]
name = "casper_wasm_sdk"
path = "src/lib.rs"

[[bin]]
name = "casper_wasm_sdk"
path = "src/main.rs"
doc = false

[profile.release]
lto = true
