[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

casper-wasm-sdk = { path = "../casper-wasm-sdk" }
tokio = { version = "1", features = ["full"] }
casper-types = { version = "3.0.0", git = "https://github.com/casper-network/casper-node.git", branch = "rustSDK", default-features = false }
