[package]
name = "sdk_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-rust-wasm-sdk = { path = "../../../" }
tokio = { version = "1", features = ["full"] }
once_cell = "*"
chrono = "0.4"
lazy_static = "*"
serde_json = "*"
dotenvy = "0.15.7"

[[bin]]
name = "sdk_tests"
path = "src/main.rs"

[lib]
name = "sdk_tests"
path = "src/lib.rs"

[patch.crates-io]
casper-hashing = { version = "3.0.0", git = "https://github.com/casper-network/casper-node", branch = "dev" }
casper-types = { version = "4.0.1", git = "https://github.com/casper-network/casper-node", branch = "dev" }
casper-client = { version = "2.0.0", git = "https://github.com/casper-ecosystem/casper-client-rs", branch = "dev" }
