[package]
name = "sdk_tests"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-rust-wasm-sdk = { path = "../../../", version = "2.0.0" }
tokio = { version = "1", features = ["full"] }
once_cell = "*"
chrono = "0.4"
lazy_static = "*"
serde_json = "*"
dotenvy = "0.15.7"

[[bin]]
name = "sdk_tests"
path = "src/main.rs"

[lib]
name = "sdk_tests"
path = "src/lib.rs"

[patch.crates-io]
casper-types = { version = "5.0.0", git = "https://github.com/casper-network/casper-node", branch = "feat-2.0" }
casper-client = { version = "2.0.0", git = "https://github.com/casper-ecosystem/casper-client-rs", branch = "feat-track-node-2.0" }
